--- a/assets/_sass/_common.scss
+++ b/assets/_sass/_common.scss
@@ -11,7 +11,7 @@
 }
 
 .section-intro {
-  max-width: 700px;
+  @extend .body-content;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
