--- a/assets/_sass/_variables.scss
+++ b/assets/_sass/_variables.scss
@@ -15,5 +15,6 @@ $yellow: #f89406;
 $aqua: #7FDBFF;
 
 $base-font: "weblysleek_uilight", sans-serif;
+$body-max-width: 980px;
 // break point
 $small: 750px;
