--- a/assets/_sass/site/_header.scss
+++ b/assets/_sass/site/_header.scss
@@ -141,7 +141,7 @@ header .top-bar {
   position: absolute;
   left: 90px;
   top: 0;
-  width: 250px;
+  width: 175px;
 }
 header .logo {
   float: left;
@@ -270,7 +270,8 @@ header .logo span {
   background: rgba(51, 47, 47, 0.85);
   padding: 24px 30px 42px;
   margin: 0;
-  width: 100%;
+  min-width: 150px;
+  max-width: 350px;
   height: auto;
   clear: both;
   display: none;
@@ -318,8 +319,13 @@ header .logo span {
     left: 35px;
   }
 }
-@media only screen and (max-width:400px) {
+@media only screen and (max-width:520px) {
   header .top-bar {
-    left: 25px;
+    left: 0;
+    width: 25px;
+  }
+
+  .logo{
+    display: none !important;
   }
 }
