--- a/assets/_sass/site/_intro.scss
+++ b/assets/_sass/site/_intro.scss
@@ -162,9 +162,6 @@
   .intro-content .intro-position {
     font-size: 1.3rem;
   }
-  .intro-social {
-    font-size: 2.5rem;
-  }
   .intro-social li {
     margin: 0 10px;
   }
@@ -190,8 +187,5 @@
   }
   .intro-content .intro-position span::before, .intro-content .intro-position span::after {
     display: none !important;
-  }
-  .intro-social {
-    font-size: 2.4rem;
   }
 }
